fix: text aligned center

--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -72,7 +72,8 @@ body{
 }
 .auth_message{
   font-size: 40px !important;
-  font-weight: 400 !important; ;
+  font-weight: 400 !important;
+  text-align: center;
 }
 .email-label{
   font-size: 23px;
